syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "niffler-currency.proto";

package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerSpendProto";

//контракт сервиса
service SpendService {
  rpc SaveSpendForUser(SpendRequest) returns (SpendResponse) {}
  rpc EditSpendForUser(SpendRequest) returns (SpendResponse) {}
}

message SpendResponse {
  reserved 7;
  reserved "anotherField";
  string id = 1;
  google.protobuf.Timestamp spendDate = 2;
  string category = 3;
  CurrencyValues currency = 4;
  double amount = 5;
  string description = 6;
  string username = 8;
}

message SpendRequest {
  string id = 1;
  google.protobuf.Timestamp spendDate = 2;
  string category = 3;
  CurrencyValues currency = 4;
  double amount = 5;
  string description = 6;
  string username = 7;
}
